fix last item z-index in UserAvatarList

--- a/src/components/specific/users/user-avatar-list/UserAvatarList.scss
+++ b/src/components/specific/users/user-avatar-list/UserAvatarList.scss
@@ -17,5 +17,6 @@
     font-weight: bold;
     background-color: var(--color-primary);
     color: var(--color-silver-light);
+    z-index: 1;
   }
 }
